tests/integrations/basic/tests/actual_tests/mac_span.stderr
error: unused variable: `x`
  --> tests/actual_tests/mac_span.rs:5:13
   |
5  |         let x = 0;
   |             ^ help: if this is intentional, prefix it with an underscore: `_x`
...
10 |     m!();
   |     ---- in this macro invocation
   |
note: the lint level is defined here
  --> tests/actual_tests/mac_span.rs:1:9
   |
1  | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

